# openvox-gui

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALL.md  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING.md  UPDATE.md  VERSION  install.conf.example  install.sh  nginx.conf  package-lock.json
.github/workflows/: enforce-tags.yml  leak-check.yml
backend/: alembic.ini  requirements.txt
backend/alembic/: README.md  env.py  script.py.mako
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/tests/: __init__.py  test_audit.py  test_bolt_orchestration.py  test_deploy_history.py  test_enc_merge.py  (+3 more)
bolt-plugin/: README.md  inventory.yaml.example
config/: .env  .env.example  openvox-gui-fleet-health.service  openvox-gui-fleet-health.timer  openvox-gui.service  openvox-pkgs-webserver.conf  openvox-repo-sync.service  openvox-repo-sync.timer
docs/: ARCHITECTURE.md  INSTALLER.md  LDAP.md  METRICS.md  PERFORMANCE.md  SUDOERS.md  TUNING.md  puppet-agent-disabled-fact.md
etc/: README.md  allowed-environments.txt.example  installer-ip-allowlist.txt.example
frontend/: .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
maintenance/: README.md  apache-maintenance.conf  maintenance-casual.html  maintenance-formal.html
ovox/: README.md  VERSION  pyproject.toml
ovox/man/man1/: ovox.1
ovox/ovox/: __init__.py  __main__.py  client.py  config.py  main.py  py.typed  version.py
ovox/ovox/commands/: __init__.py  certs.py  infra.py  maintenance.py  nodes.py  token.py
ovox/ovox/utils/: __init__.py  formatters.py
scripts/: bump-version.sh  deploy.sh  enc.py  ensure-sudoers.sh  generate_bolt_token.py  generate_fleet_health_report.py  manage_users.py  r10k-deploy.sh  sync-openvox-repo.sh  update_local.sh  update_remote.sh
(+155 files in other folders)
